# routing-table

./: AGENT.md  Cargo.toml  README.md
src/: lib.rs  metric.rs  prefix.rs  route.rs  selection.rs  trie.rs
